--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
@@ -28,6 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "react-router-dom": "^7.5.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.10.0",
     "vite": "^6.2.1",
     "vitest": "^3.0.8"
   }
