--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "cypress": "^14.3.2",
     "eslint": "^9.9.0",
+    "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
